  behaviour with other property functions. Closes #2648.
- TLS v1.1 now not enabled by default. It is still possible to explicitly
  choose TLS v1.1, but this is not recommended and will be removed in a future
  version.
- Add `mosquitto_unsubscribe2_v5_callback_set`, which provides a callback that
  gives access to reason codes for each of the unsubscription requests.

Clients:
- Add `-W` timeout support to Windows.
- The `--insecure` option now disables all server certificate verification.
- Fix incorrect output formatting in mosquitto_sub when using field widths
  with `%x` and `%X` for printing the payload in hex.
- Add float printing option to mosquitto_sub.
- Fix `-f` and `-s` options in mosquitto_rr.
- Add websockets support.
- Using `-x` now sets the clients to use MQTT v5.0.
- Fix parsing of IPv6 addresses in socks proxy urls.

Build:
- Increased CMake minimal required version to 3.14, which is required for the
  preinstalled SQLite3 find module.
- Add an CMake option `WITH_LTO` to enable/disable link time optimization.
- Set C99 as the explicit, rather than implicit, build standard.


2.0.15 - 2022-08-16
===================

Security:
- Deleting the group configured as the anonymous group in the Dynamic Security
  plugin, would leave a dangling pointer that could lead to a single crash.
  This is considered a minor issue - only administrative users should have
  access to dynsec, the impact on availability is one-off, and there is no
  associated loss of data. It is now forbidden to delete the group configured
  as the anonymous group.

Broker:
- Fix memory leak when a plugin modifies the topic of a message in
  MOSQ_EVT_MESSAGE.
- Fix bridge `restart_timeout` not being honoured.
- Fix potential memory leaks if a plugin modifies the message in the
  MOSQ_EVT_MESSAGE event.
- Fix unused flags in CONNECT command being forced to be 0, which is not
  required for MQTT v3.1. Closes #2522.
- Improve documentation of `persistent_client_expiration` option.