@@ -44,7 +44,7 @@ int main(int argc, char *argv[])
         return 1;
     }
 
-    CU_basic_set_mode(CU_BRM_VERBOSE);
+    CU_basic_set_mode(CU_BRM_NORMAL);
     CU_basic_run_tests();
 	fails = CU_get_number_of_failures();
     CU_cleanup_registry();
